# Aggregate-Salary-Bot

./: .flake8  .gitignore  README.md  docker-compose.yml  env_example  init-mongo.sh  main.py  pyproject.toml
src/: app.py
src/models/: bot_models.py
src/services/: bot_service.py  database_service.py  salary_service.py
src/utils/: consts.py  date_utils.py  env_utils.py  pipeline_utils.py  type_utils.py
