[tool.poetry]
name = "task-bot"
version = "0.1.0"
description = ""
authors = ["korpaxdev <korpaxdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.3.3"
motor = "^3.4.0"
python-dateutil = "^2.9.0.post0"
pytelegrambotapi = "^4.19.1"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
